--- a/application/frontend/package.json
+++ b/application/frontend/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
+    "postcss-nesting": "^13.0.2",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
   },
   "description": "Hello this is my repository that contains my project where i am working on improving my coding skills",
